--- a/html_renderer/public/index.html
+++ b/html_renderer/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Pyinstrument dev server</title>
+    <title>joulehunter dev server</title>
   </head>
   <body>
     <div id="app"></div>
